--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,1205 @@
 body {
+  background: #f1f1f1;
+  font-size: 24px;
+  color: 333;
+  font-family: Helvetica Neue, Helvetica, sans-serif;
+  --red: #e54d42;
+  --orange: #f37b1d;
+  --yellow: #fbbd08;
+  --olive: #8dc63f;
+  --green: #39b54a;
+  --cyan: #1cbbb4;
+  --blue: #0081ff;
+  --purple: #6739b6;
+  --mauve: #9c26b0;
+  --pink: #e03997;
+  --brown: #a5673f;
+  --grey: #8799a3;
+  --gray: #aaa;
+  --black: #333;
+  --white: #fff;
+  --gradualRed: linear-gradient(45deg, #f43f3b, #ec008c);
+  --gradualOrange: linear-gradient(45deg, #ff9700, #ed1c24);
+  --gradualGreen: linear-gradient(45deg, #39b54a, #8dc63f);
+  --gradualPurple: linear-gradient(45deg, #9000ff, #5e00ff);
+  --gradualPink: linear-gradient(45deg, #ec008c, #6739b6);
+  --gradualBlue: linear-gradient(45deg, #0081ff, #1cbbb4);
+}
+
+/* ==================
+          文本
+ ==================== */
+
+.text-xs {
+  font-size: 10px;
+}
+
+.text-sm {
+  font-size: 12px;
+}
+
+.text-df {
+  font-size: 14px;
+}
+
+.text-lg {
+  font-size: 16px;
+}
+
+.text-xl {
+  font-size: 18px;
+}
+
+.text-xxl {
+  font-size: 22px;
+}
+
+.text-sl {
+  font-size: 40px;
+}
+
+.text-xsl {
+  font-size: 60px;
+}
+
+.text-Abc {
+  text-transform: Capitalize;
+}
+
+.text-ABC {
+  text-transform: Uppercase;
+}
+
+.text-abc {
+  text-transform: Lowercase;
+}
+
+.text-price::before {
+  content: "¥";
+  font-size: 80%;
+  margin-right: 2px;
+}
+
+.text-cut {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.text-bold {
+  font-weight: bold;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-content {
+  line-height: 1.6;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.text-red,
+.line-red,
+.lines-red {
+  color: var(--red);
+}
+
+.text-orange,
+.line-orange,
+.lines-orange {
+  color: var(--orange);
+}
+
+.text-yellow,
+.line-yellow,
+.lines-yellow {
+  color: var(--yellow);
+}
+
+.text-olive,
+.line-olive,
+.lines-olive {
+  color: var(--olive);
+}
+
+.text-green,
+.line-green,
+.lines-green {
+  color: var(--green);
+}
+
+.text-cyan,
+.line-cyan,
+.lines-cyan {
+  color: var(--cyan);
+}
+
+.text-blue,
+.line-blue,
+.lines-blue {
+  color: var(--blue);
+}
+
+.text-purple,
+.line-purple,
+.lines-purple {
+  color: var(--purple);
+}
+
+.text-mauve,
+.line-mauve,
+.lines-mauve {
+  color: var(--mauve);
+}
+
+.text-pink,
+.line-pink,
+.lines-pink {
+  color: var(--pink);
+}
+
+.text-brown,
+.line-brown,
+.lines-brown {
+  color: var(--brown);
+}
+
+.text-grey,
+.line-grey,
+.lines-grey {
+  color: var(--grey);
+}
+
+.text-gray,
+.line-gray,
+.lines-gray {
+  color: var(--grey);
+}
+
+.text-black,
+.line-black,
+.lines-black {
+  color: var(--black);
+}
+
+.text-white,
+.line-white,
+.lines-white {
+  color: #fff;
+}
+
+.text-shadow {
+  text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.4);
+}
+
+.bg-img {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.bg-mask {
+  background-color: var(--black);
+  position: relative;
+}
+
+.bg-mask::after {
+  content: "";
+  border-radius: inherit;
+  width: 100%;
+  height: 100%;
+  display: block;
+  background-color: rgba(0, 0, 0, 0.4);
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+}
+
+/* -- 浮动 --  */
+
+.cf::after,
+.cf::before {
+  content: " ";
+  display: table;
+}
+
+.cf::after {
+  clear: both;
+}
+
+.fl {
+  float: left;
+}
+
+.fr {
+  float: right;
+}
+
+/* ==================
+          背景
+ ==================== */
+
+.line-red::after,
+.lines-red::after {
+  border-color: var(--red);
+}
+
+.line-orange::after,
+.lines-orange::after {
+  border-color: var(--orange);
+}
+
+.line-yellow::after,
+.lines-yellow::after {
+  border-color: var(--yellow);
+}
+
+.line-olive::after,
+.lines-olive::after {
+  border-color: var(--olive);
+}
+
+.line-green::after,
+.lines-green::after {
+  border-color: var(--green);
+}
+
+.line-cyan::after,
+.lines-cyan::after {
+  border-color: var(--cyan);
+}
+
+.line-blue::after,
+.lines-blue::after {
+  border-color: var(--blue);
+}
+
+.line-purple::after,
+.lines-purple::after {
+  border-color: var(--purple);
+}
+
+.line-mauve::after,
+.lines-mauve::after {
+  border-color: var(--mauve);
+}
+
+.line-pink::after,
+.lines-pink::after {
+  border-color: var(--pink);
+}
+
+.line-brown::after,
+.lines-brown::after {
+  border-color: var(--brown);
+}
+
+.line-grey::after,
+.lines-grey::after {
+  border-color: var(--grey);
+}
+
+.line-gray::after,
+.lines-gray::after {
+  border-color: var(--grey);
+}
+
+.line-black::after,
+.lines-black::after {
+  border-color: var(--black);
+}
+
+.line-white::after,
+.lines-white::after {
+  border-color: #fff;
+}
+
+.bg-red {
+  background-color: var(--red);
+  color: #fff;
+}
+
+.bg-orange {
+  background-color: var(--orange);
+  color: #fff;
+}
+
+.bg-yellow {
+  background-color: var(--yellow);
+  color: var(--black);
+}
+
+.bg-olive {
+  background-color: var(--olive);
+  color: #fff;
+}
+
+.bg-green {
+  background-color: var(--green);
+  color: #fff;
+}
+
+.bg-cyan {
+  background-color: var(--cyan);
+  color: #fff;
+}
+
+.bg-blue {
+  background-color: var(--blue);
+  color: #fff;
+}
+
+.bg-purple {
+  background-color: var(--purple);
+  color: #fff;
+}
+
+.bg-mauve {
+  background-color: var(--mauve);
+  color: #fff;
+}
+
+.bg-pink {
+  background-color: var(--pink);
+  color: #fff;
+}
+
+.bg-brown {
+  background-color: var(--brown);
+  color: #fff;
+}
+
+.bg-grey {
+  background-color: var(--grey);
+  color: #fff;
+}
+
+.bg-gray {
+  background-color: #f0f0f0;
+  color: #666;
+}
+
+.bg-black {
+  background-color: var(--black);
+  color: #fff;
+}
+
+.bg-white {
   background-color: #fff;
+  color: #666;
+}
+
+.bg-shadeTop {
+  background-image: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.01));
+  color: #fff;
+}
+
+.bg-shadeBottom {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.01), rgba(0, 0, 0, 1));
+  color: #fff;
+}
+
+.bg-red.light {
+  color: var(--red);
+  background: #fadbd9;
+}
+
+.bg-orange.light {
+  color: var(--orange);
+  background: #fde6d2;
+}
+
+.bg-yellow.light {
+  color: var(--yellow);
+  background: #fef2ce;
+}
+
+.bg-olive.light {
+  color: var(--olive);
+  background: #e8f4d9;
+}
+
+.bg-green.light {
+  color: var(--green);
+  background: #d7f0db;
+}
+
+.bg-cyan.light {
+  color: var(--cyan);
+  background: #d2f1f0;
+}
+
+.bg-blue.light {
+  color: var(--blue);
+  background: #cce6ff;
+}
+
+.bg-purple.light {
+  color: var(--purple);
+  background: #e1d7f0;
+}
+
+.bg-mauve.light {
+  color: var(--mauve);
+  background: #ebd4ef;
+}
+
+.bg-pink.light {
+  color: var(--pink);
+  background: #f9d7ea;
+}
+
+.bg-brown.light {
+  color: var(--brown);
+  background: #ede1d9;
+}
+
+.bg-grey.light {
+  color: var(--grey);
+  background: #e7ebed;
+}
+
+.bg-gray.light {
+  color: #666;
+  background: #fadbd9;
+}
+
+.bg-gray.light {
+  color: #888;
+  background: #f1f1f1;
+}
+
+.bg-gradual-red {
+  background-image: var(--gradualRed);
+  color: #fff;
+}
+
+.bg-gradual-orange {
+  background-image: var(--gradualOrange);
+  color: #fff;
+}
+
+.bg-gradual-green {
+  background-image: var(--gradualGreen);
+  color: #fff;
+}
+
+.bg-gradual-purple {
+  background-image: var(--gradualPurple);
+  color: #fff;
+}
+
+.bg-gradual-pink {
+  background-image: var(--gradualPink);
+  color: #fff;
+}
+
+.bg-gradual-blue {
+  background-image: var(--gradualBlue);
+  color: #fff;
+}
+
+.shadow[class*="-red"] {
+  box-shadow: 3px 3px 4px rgba(204, 69, 59, 0.2);
+}
+
+.shadow[class*="-orange"] {
+  box-shadow: 3px 3px 4px rgba(217, 109, 26, 0.2);
+}
+
+.shadow[class*="-yellow"] {
+  box-shadow: 3px 3px 4px rgba(224, 170, 7, 0.2);
+}
+
+.shadow[class*="-olive"] {
+  box-shadow: 3px 3px 4px rgba(124, 173, 55, 0.2);
+}
+
+.shadow[class*="-green"] {
+  box-shadow: 3px 3px 4px rgba(48, 156, 63, 0.2);
+}
+
+.shadow[class*="-cyan"] {
+  box-shadow: 3px 3px 4px rgba(28, 187, 180, 0.2);
+}
+
+.shadow[class*="-blue"] {
+  box-shadow: 3px 3px 4px rgba(0, 102, 204, 0.2);
+}
+
+.shadow[class*="-purple"] {
+  box-shadow: 3px 3px 4px rgba(88, 48, 156, 0.2);
+}
+
+.shadow[class*="-mauve"] {
+  box-shadow: 3px 3px 4px rgba(133, 33, 150, 0.2);
+}
+
+.shadow[class*="-pink"] {
+  box-shadow: 3px 3px 4px rgba(199, 50, 134, 0.2);
+}
+
+.btn.shadow[class*="-brown"] {
+  box-shadow: 3px 3px 4px rgba(140, 88, 53, 0.2);
+}
+
+.btn.shadow[class*="-grey"] {
+  box-shadow: 3px 3px 4px rgba(114, 130, 138, 0.2);
+}
+
+.btn.shadow[class*="-gray"] {
+  box-shadow: 3px 3px 4px rgba(114, 130, 138, 0.2);
+}
+
+.btn.shadow[class*="-black"] {
+  box-shadow: 3px 3px 4px rgba(26, 26, 26, 0.2);
+}
+
+/* ==================
+          布局
+ ==================== */
+
+/*  -- flex弹性布局 -- */
+
+.flex {
+	display: flex;
+}
+
+.basis-xs {
+	flex-basis: 20%;
+}
+
+.basis-sm {
+	flex-basis: 40%;
+}
+
+.basis-df {
+	flex-basis: 50%;
+}
+
+.basis-lg {
+	flex-basis: 60%;
+}
+
+.basis-xl {
+	flex-basis: 80%;
+}
+
+.flex-sub {
+	flex: 1;
+}
+
+.flex-twice {
+	flex: 2;
+}
+
+.flex-treble {
+	flex: 3;
+}
+
+.flex-direction {
+	flex-direction: column;
+}
+
+.flex-wrap {
+	flex-wrap: wrap;
+}
+
+.align-start {
+	align-items: flex-start;
+}
+
+.align-end {
+	align-items: flex-end;
+}
+
+.align-center {
+	align-items: center;
+}
+
+.align-stretch {
+	align-items: stretch;
+}
+
+.self-start {
+	align-self: flex-start;
+}
+
+.self-center {
+	align-self: flex-center;
+}
+
+.self-end {
+	align-self: flex-end;
+}
+
+.self-stretch {
+	align-self: stretch;
+}
+
+.align-stretch {
+	align-items: stretch;
+}
+
+.justify-start {
+	justify-content: flex-start;
+}
+
+.justify-end {
+	justify-content: flex-end;
+}
+
+.justify-center {
+	justify-content: center;
+}
+
+.justify-between {
+	justify-content: space-between;
+}
+
+.justify-around {
+	justify-content: space-around;
+}
+
+/* grid布局 */
+
+.grid {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.grid.grid-square {
+	overflow: hidden;
+}
+
+.grid.grid-square .tag {
+	position: absolute;
+	right: 0;
+	top: 0;
+	border-bottom-left-radius: 3px;
+	padding: 6rpx 12rpx;
+	height: auto;
+	background-color: rgba(0, 0, 0, 0.5);
+}
+
+.grid.grid-square>view>text[class*="icon"] {
+	font-size: 26px;
+	position: absolute;
+	color: var(--grey);
+	margin: auto;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+
+.grid.grid-square>view {
+	margin-right: 10px;
+	margin-bottom: 10px;
+	border-radius: 3px;
+	position: relative;
+	overflow: hidden;
+}
+
+.grid.col-1.grid-square>view {
+	padding-bottom: 100%;
+	height: 0;
+	margin-right: 0;
+}
+
+.grid.col-2.grid-square>view {
+	padding-bottom: calc((100% - 10px)/2);
+	height: 0;
+	width: calc((100% - 10px)/2);
+}
+
+.grid.col-2.grid-square>view:nth-child(2n) {
+	margin-right: 0;
+}
+
+.grid.col-3.grid-square>view {
+	padding-bottom: calc((100% - 20px)/3);
+	height: 0;
+	width: calc((100% - 20px)/3);
+}
+
+.grid.col-3.grid-square>view:nth-child(3n) {
+	margin-right: 0;
+}
+
+.grid.col-4.grid-square>view {
+	padding-bottom: calc((100% - 30px)/4);
+	height: 0;
+	width: calc((100% - 30px)/4);
+}
+
+.grid.col-4.grid-square>view:nth-child(4n) {
+	margin-right: 0;
+}
+
+.grid.col-5.grid-square>view {
+	padding-bottom: calc((100% - 40px)/5);
+	height: 0;
+	width: calc((100% - 40px)/5);
+}
+
+.grid.col-1>view {
+	width: 100%;
+}
+
+.grid.col-2>view {
+	width: 50%;
+}
+
+.grid.col-3>view {
+	width: 33.33%;
+}
+
+.grid.col-4>view {
+	width: 25%;
+}
+
+.grid.col-5>view {
+	width: 20%;
+}
+
+/*  -- 内外边距 -- */
+
+.margin-0 {
+	margin: 0;
+}
+
+.margin-xs {
+	margin: 5px;
+}
+
+.margin-sm {
+	margin: 10px;
+}
+
+.margin {
+	margin: 15px;
+}
+
+.margin-lg {
+	margin: 20px;
+}
+
+.margin-xl {
+	margin: 25px;
+}
+
+.margin-top-xs {
+	margin-top: 5px;
+}
+
+.margin-top-sm {
+	margin-top: 10px;
+}
+
+.margin-top {
+	margin-top: 15px;
+}
+
+.margin-top-lg {
+	margin-top: 20px;
+}
+
+.margin-top-xl {
+	margin-top: 25px;
+}
+
+.margin-right-xs {
+	margin-right: 5px;
+}
+
+.margin-right-sm {
+	margin-right: 10px;
+}
+
+.margin-right {
+	margin-right: 15px;
+}
+
+.margin-right-lg {
+	margin-right: 20px;
+}
+
+.margin-right-xl {
+	margin-right: 25px;
+}
+
+.margin-bottom-xs {
+	margin-bottom: 5px;
+}
+
+.margin-bottom-sm {
+	margin-bottom: 10px;
+}
+
+.margin-bottom {
+	margin-bottom: 15px;
+}
+
+.margin-bottom-lg {
+	margin-bottom: 20px;
+}
+
+.margin-bottom-xl {
+	margin-bottom: 25px;
+}
+
+.margin-left-xs {
+	margin-left: 5px;
+}
+
+.margin-left-sm {
+	margin-left: 10px;
+}
+
+.margin-left {
+	margin-left: 15px;
+}
+
+.margin-left-lg {
+	margin-left: 20px;
+}
+
+.margin-left-xl {
+	margin-left: 25px;
+}
+
+.margin-lr-xs {
+	margin-left: 5px;
+	margin-right: 5px;
+}
+
+.margin-lr-sm {
+	margin-left: 10px;
+	margin-right: 10px;
+}
+
+.margin-lr {
+	margin-left: 15px;
+	margin-right: 15px;
+}
+
+.margin-lr-lg {
+	margin-left: 20px;
+	margin-right: 20px;
+}
+
+.margin-lr-xl {
+	margin-left: 25px;
+	margin-right: 25px;
+}
+
+.margin-tb-xs {
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
+.margin-tb-sm {
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+.margin-tb {
+	margin-top: 15px;
+	margin-bottom: 15px;
+}
+
+.margin-tb-lg {
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+.margin-tb-xl {
+	margin-top: 25px;
+	margin-bottom: 25px;
+}
+
+.padding-0 {
+	padding: 0;
+}
+
+.padding-xs {
+	padding: 5px;
+}
+
+.padding-sm {
+	padding: 10px;
+}
+
+.padding {
+	padding: 15px;
+}
+
+.padding-lg {
+	padding: 20px;
+}
+
+.padding-xl {
+	padding: 25px;
+}
+
+.padding-top-xs {
+	padding-top: 5px;
+}
+
+.padding-top-sm {
+	padding-top: 10px;
+}
+
+.padding-top {
+	padding-top: 15px;
+}
+
+.padding-top-lg {
+	padding-top: 20px;
+}
+
+.padding-top-xl {
+	padding-top: 25px;
+}
+
+.padding-right-xs {
+	padding-right: 5px;
+}
+
+.padding-right-sm {
+	padding-right: 10px;
+}
+
+.padding-right {
+	padding-right: 15px;
+}
+
+.padding-right-lg {
+	padding-right: 20px;
+}
+
+.padding-right-xl {
+	padding-right: 25px;
+}
+
+.padding-bottom-xs {
+	padding-bottom: 5px;
+}
+
+.padding-bottom-sm {
+	padding-bottom: 10px;
+}
+
+.padding-bottom {
+	padding-bottom: 15px;
+}
+
+.padding-bottom-lg {
+	padding-bottom: 20px;
+}
+
+.padding-bottom-xl {
+	padding-bottom: 25px;
+}
+
+.padding-left-xs {
+	padding-left: 5px;
+}
+
+.padding-left-sm {
+	padding-left: 10px;
+}
+
+.padding-left {
+	padding-left: 15px;
+}
+
+.padding-left-lg {
+	padding-left: 20px;
+}
+
+.padding-left-xl {
+	padding-left: 25px;
+}
+
+.padding-lr-xs {
+	padding-left: 5px;
+	padding-right: 5px;
+}
+
+.padding-lr-sm {
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+.padding-lr {
+	padding-left: 15px;
+	padding-right: 15px;
+}
+
+.padding-lr-lg {
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+.padding-lr-xl {
+	padding-left: 25px;
+	padding-right: 25px;
+}
+
+.padding-tb-xs {
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
+.padding-tb-sm {
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+.padding-tb {
+	padding-top: 15px;
+	padding-bottom: 15px;
+}
+
+.padding-tb-lg {
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
+
+.padding-tb-xl {
+	padding-top: 25px;
+	padding-bottom: 25px;
+}
+
+
+/* ==================
+          按钮
+ ==================== */
+
+ .btn {
+	position: relative;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	box-sizing: border-box;
+	padding: 0 15px;
+	font-size: 14px;
+	height: 32px;
+	line-height: 1;
+	text-align: center;
+	text-decoration: none;
+	overflow: visible;
+	margin-left: initial;
+	transform: translate(0px, 0px);
+	margin-right: initial;
+}
+
+.btn::after {
+	display: none;
+}
+
+.btn:not([class*="bg-"]) {
+	background-color: #f0f0f0;
+}
+
+.btn[class*="line"] {
+	background-color: transparent;
+}
+
+.btn[class*="line"]::after {
+	content: " ";
+	display: block;
+	width: 200%;
+	height: 200%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	border: 1px solid currentColor;
+	transform: scale(0.5);
+	transform-origin: 0 0;
+	box-sizing: border-box;
+	border-radius: 6px;
+	z-index: 1;
+	pointer-events: none;
+}
+
+.btn.round[class*="line"]::after {
+	border-radius: 500px;
+}
+
+.btn[class*="lines"]::after {
+	border: 3px solid currentColor;
+}
+
+.btn[class*="bg-"]::after {
+	display: none;
+}
+
+.btn.sm {
+	padding: 0 10px;
+	font-size: 10px;
+	height: 24px;
+}
+
+.btn.lg {
+	padding: 0 20px;
+	font-size: 18px;
+	height: 40px;
+}
+
+.btn.icon.sm {
+	width: 24px;
+	height: 24px;
+}
+
+.btn.icon {
+	width: 32px;
+	height: 32px;
+	border-radius: 250px;
+	padding: 0;
+}
+
+button.icon.lg {
+	width: 40px;
+	height: 40px;
+}
+
+.btn.shadow-blur::before {
+	top: 2px;
+	left: 2px;
+	filter: blur(3px);
+	opacity: 0.6;
+}
+
+.btn.button-hover {
+	transform: translate(.5px, .5px);
+}
+
+.block {
+	display: block;
+}
+
+.btn.block {
+	display: flex;
+}
+
+.btn[disabled] {
+	opacity: 0.6;
+	color: #fff;
 }
